login-controls-alignment-correction

--- a/loginstyle.css
+++ b/loginstyle.css
@@ -2,6 +2,34 @@ body{
     background-color: #8EACCD;
     
 }
-form{
+.login{
     display: block;
+}
+.login-info{
+    border: 25px;
+    position: relative;
+    top:500px;
+}
+.form{
+    position: absolute;
+    left: 20px;
+    padding: 10px;
+}
+#pcode{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: right;
+}
+#forgotlink{
+    padding-left: 75px;
+    padding-bottom: 10px;
+}
+#lbutton{
+    padding-left: 75px;
+    padding-bottom: 10px;
+}
+#suplink{
+    padding-left: 75px;
+    padding-bottom: 10px;
+
 }
